[project]
name = "SSTImportanceSampling"
version = "0.1.0"
description = "Importance sampling of storm centers for Stochastic Storm Transposition"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "numpy",
    "pandas",
    "xarray",
    "geopandas",
    "rasterio",
    "shapely",
    "joblib",
    "tqdm"
]

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"